--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 </head>
 <body>
     <div class="image">
-        <h1 class="odin">ODIN</h1>
-        <img src="images/odin-lined.png" alt="">
+        <div class="odin">
+            <img class="odin-image" src="images/odin-lined.png" alt="">
+            <h1>ODIN</h1>            
+        </div>
+
         <p class="caption">Photo by Halie West on Unplash</p>
     </div>
     <div class="right">
@@ -22,23 +25,39 @@
         </div>
         <div class="form">
             <form>
-                <label for="first_name">First Name</label>
-                <input type="text" id="first_name" placeholder="John">
+                <div class="form-section">
+                    <div class="form-field">
+                        <label for="first_name">First Name</label>
+                        <input type="text" id="first_name" >                    
+                    </div>
+                    <div class="form-field">
+                        <label for="last_name">Last Name</label>
+                        <input type="text" id="last_name" >                    
+                    </div>
+                </div>
 
-                <label for="last_name">Last Name</label>
-                <input type="text" id="last_name" placeholder="Doe">
+                <div class="form-section">
+                    <div class="form-field">
+                        <label for="email">Email</label>
+                        <input type="email" id="email" >                   
+                    </div>
+                    <div class="form-field">
+                        <label for="phone-number">Phone Number</label>
+                        <input type="number" id="phone-number" >                    
+                    </div>
+                </div>
 
-                <label for="email">Email</label>
-                <input type="email" id="email" placeholder="example@gmail.com">
+                <div class="form-section">
+                    <div class="form-field">
+                        <label for="password">Password</label>
+                        <input class="pass" type="password" id="password">                    
+                    </div>
+                    <div class="form-field">
+                        <label for="conf-pass">Confirm Password</label>
+                        <input class="pass" type="password" id="conf-pass">                    
+                    </div>                    
+                </div>
 
-                <label for="phone-number">Phone Number</label>
-                <input type="number" id="phone-number" placeholder="123-456-7890">
-
-                <label for="password">Password</label>
-                <input type="password" id="password">
-
-                <label for="conf-pass">Confirm Password</label>
-                <input type="password" id="conf-pass">
             </form>
         </div>
         <div class="creation">
